--- a/angular_hn/pubspec.yaml
+++ b/angular_hn/pubspec.yaml
@@ -4,6 +4,7 @@ environment:
 
 dependencies:
   angular: ^5.0.0-alpha+10
+  angular_components: ^0.9.0-alpha+10 
   angular_router: ^2.0.0-alpha+10
   model: 
     path: ../model
